 * Fix: Added `scope` attribute to table headers in TableBlock output (Quadric)
 * Fix: Prevent KeyError when accessing a StreamField on a deferred queryset (Paulo Alvarado)
 * Fix: Hide empty 'view live' links (Karran Besen)
 * Fix: Mark up a few strings for translation (Luiz Boaretto)
 * Fix: Invalid focal_point attribute on image edit view (Michał (Quadric) Sieradzki)


2.8.1 (14.04.2020)
~~~~~~~~~~~~~~~~~~

 * Fix: CVE-2020-11001 - prevent XSS attack via page revision comparison view (Vlad Gerasimenko, Matt Westcott)


2.8 (03.02.2020)
~~~~~~~~~~~~~~~~

 * Django 3.0 support (Matt Westcott, Mads Jensen)
 * Improved page locking to give editors exclusive edit access (Karl Hobley, Jacob Topp-Mugglestone)
 * Removed support for Django 2.0
 * Removed leftover Python 2.x compatibility code (Sergey Fedoseev)
 * Combine flake8 configurations (Sergey Fedoseev)
 * Improve diffing behavior for text fields (Aliosha Padovani)
 * Improve contrast of disabled inputs (Nick Smith)
 * Added `get_document_model_string` function (Andrey Smirnov)
 * Added support for Cloudflare API tokens for frontend cache invalidation (Tom Usher)
 * Cloudflare frontend cache invalidation requests are now sent in chunks of 30 to fit within API limits (Tom Usher)
 * Added `ancestors` field to the pages endpoint in admin API (Karl Hobley)
 * Removed Django admin management of `Page` & `Site` models (Andreas Bernacca)
 * Cleaned up Django docs URLs in documentation (Pete Andrew)
 * Add StreamFieldPanel to available panel types in documentation (Dan Swain)
 * Add `{{ block.super }}` example to ModelAdmin customisation in documentation (Dan Swain)
 * Add ability to filter image index by a tag (Benedikt Willi)
 * Add partial experimental support for nested InlinePanels (Matt Westcott, Sam Costigan, Andy Chosak, Scott Cranfill)
 * Added cache control headers when serving documents (Johannes Vogel)
 * Use `sensitive_post_parameters` on password reset form (Dan Braghis)