@@ -61,6 +61,7 @@ Bug fixes
  * Hide empty 'view live' links (Karran Besen)
  * Mark up a few strings for translation (Luiz Boaretto)
  * Invalid focal_point attribute on image edit view (Michał (Quadric) Sieradzki)
+ * No longer expose the ``.delete()`` method on the default Page.objects manager (Nick Smith)
 
 
 Upgrade considerations
@@ -76,3 +77,9 @@ Django 2.1 is no longer supported as of this release; please upgrade to Django 2
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 Wagtail's :class:`~wagtail.core.middleware.SiteMiddleware`, which makes the current site object available as the property ``request.site``, is now deprecated as it clashes with Django's sites framework and makes unnecessary database queries on non-Wagtail views. References to ``request.site`` in your code should be removed; the recommended way of retrieving the current site is ``Site.find_for_request(request)`` in Python code, and the ``{% wagtail_site %}`` tag within Django templates. Once these are removed, ``'wagtail.core.middleware.SiteMiddleware'`` can be removed from your project's ``MIDDLEWARE`` setting.
+
+
+Page / Collection managers no longer expose a ``delete`` method
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+For `consistency with standard Django models <https://docs.djangoproject.com/en/stable/topics/db/queries/#deleting-objects>`_, the ``delete()`` method is no longer available on the default Page and Collection managers. Code such as ``Page.objects.delete()`` should be changed to ``Page.objects.all().delete()``.
